feat: Add comprehensive market view configuration and admin user management enhancements
- Add market view template configuration with JSON config support
- Implement featured market configuration with ranking system
- Add market view preview functionality with config merging
- Enhance admin user service with improved validation and Keycloak sync
- Add admin user statistics endpoint and status update functionality
- Extend market model with external integration fields (source, markup, sync status)
- Add CUSTOM market type support with flexible outcome validation
- Implement auto-ordering for category creation with conflict resolution
- Add public path configuration for security filter bypass
- Update CORS configuration to support PATCH requests
- Update workflows to deploy to upheld-dragon-472517-b6 project